--- a/src/style/__about-us.scss
+++ b/src/style/__about-us.scss
@@ -2,11 +2,15 @@
   width: 1440px;
   height: 877px;
   border: none;
-  display: none;
+  // display: none;
   border: black 1px solid;
   @media (max-width: 1439px) {
-    width: 1280px;
+    // width: 1280px;
+    width: 100vw;
     margin: 0 auto;
+  }
+  @media (max-width: 1100px) {
+    height: fit-content;
   }
 }
 content {
@@ -32,12 +36,20 @@ content {
       width: 100%;
       // margin-top: 96px;
     }
+    @media (max-width: 1100px) {
+      width: 100%;
+      flex-wrap: wrap;
+      flex-direction: column;
+    }
 
     .about-us__text {
       width: 848px;
       height: 240px;
       @media (max-width: 1439px) {
-        //  width: auto;
+        width: 65%;
+      }
+      @media (max-width: 1100px) {
+        width: 100%;
       }
       h2 {
         font-size: 32px;
@@ -59,7 +71,20 @@ content {
       margin-left: 16px;
       background-color: $secondary;
       @media (max-width: 1439px) {
-        width: 50%;
+        width: 30%;
+      }
+      @media (max-width: 1100px) {
+        width: auto;
+        margin-left: 0;
+      }
+
+      img {
+        @media (max-width: 1280px) {
+          width: 90%;
+        }
+        @media (max-width: 1100px) {
+          width: 400px;
+        }
       }
     }
   }
@@ -144,6 +169,14 @@ content {
 
     font-size: 20px;
     font-weight: 400;
+    @media (max-width: 1100px) {
+      // height: fit-content; */
+      /* width: fit-content; */
+      flex-wrap: wrap;
+      justify-content: center;
+      height: fit-content;
+      margin-bottom: 20px;
+    }
     div {
       margin: 0 26px;
     }
