--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -8,13 +8,16 @@
   height: 80px;
   padding: 16px 80px;
   border: none;
-  // background-color: aqua;
-  //display: none;
+  background-color: aqua;
+  // display: none;
   @media (max-width: 1439px) {
     background-color: aquamarine;
     // width: 1100px;
-    width: 90vw;
+    width: 100vw;
+    //width: 50%;
     margin: 0 auto;
+    // justify-content: center;
+    padding: 0;
   }
   .header__wrapper {
     display: flex;
@@ -24,6 +27,14 @@
     font-size: 16px;
     font-weight: 600;
     padding: 12px 10px;
+    @media (max-width: 1439px) {
+      padding: 10px 80px;
+      width: 100%;
+      justify-content: center;
+    }
+    @media (max-width: 1280px) {
+      padding: 10px 10px;
+    }
     div {
       display: flex;
       flex-direction: row;
@@ -46,6 +57,11 @@
       width: 130px;
     }
   }
+  .header__logo {
+    @media (max-width: 1439px) {
+      margin-left: auto;
+    }
+  }
   .header__button {
     button {
       width: 180px;
@@ -57,6 +73,9 @@
       font-size: 14px;
 
       border: none;
+    }
+    @media (max-width: 1439px) {
+      margin-left: auto;
     }
   }
 }
