--- a/src/style/__selected-cases.scss
+++ b/src/style/__selected-cases.scss
@@ -4,13 +4,19 @@
   align-items: center;
   width: 1440px;
   height: fit-content;
-  display: none;
+  //display: none;
+  @media (max-width: 1439px) {
+    width: 100vw;
+  }
 }
 .selected-cases__title {
   width: 1232px;
   height: fit-content;
   margin-top: 120px;
   margin-bottom: 48px;
+  @media (max-width: 1280px) {
+    width: 90vw;
+  }
 
   h2 {
     margin: 0;
@@ -24,6 +30,9 @@
   flex-direction: column;
   width: 1280px;
   height: auto;
+  @media (max-width: 1280px) {
+    width: 90vw;
+  }
 
   .selected-cases__wrapper {
     display: flex;
@@ -61,11 +70,19 @@
     justify-content: space-between;
     width: 100%;
     height: 600px;
+    @media (max-width: 1280px) {
+      flex-direction: column;
+      height: fit-content;
+      align-items: center;
+    }
 
     .selected-cases__top_content__left {
       width: 632px;
       height: 600px;
       background-image: url(../images/am-img.png);
+      @media (max-width: 1280px) {
+        width: 90vw;
+      }
 
       .selected-cases__am-block {
         display: flex;
@@ -73,6 +90,9 @@
         justify-content: space-between;
         width: 100%;
         height: 100%;
+        @media (max-width: 1280px) {
+          width: 90vw;
+        }
 
         .selected-cases__wrapper {
           height: 100%;
@@ -88,12 +108,19 @@
       justify-content: space-between;
       width: 632px;
       height: 600px;
+      @media (max-width: 1280px) {
+        width: 90vw;
+        margin-top: 16px;
+      }
 
       .selected-cases__rzd_block {
         display: flex;
         flex-direction: row;
         height: 292px;
         background-color: $gray-light;
+        @media (max-width: 1280px) {
+          width: 90vw;
+        }
 
         .selected-cases__rzd-img {
           width: 530px;
@@ -128,6 +155,13 @@
     flex-flow: row wrap;
     // transition-duration: 2s;
     // transition-duration: 9s;
+    @media (max-width: 1280px) {
+      // flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      width: 90vw;
+      margin: 0 auto;
+    }
 
     @keyframes showBlock {
       0% {
@@ -143,13 +177,18 @@
       height: 424px;
       margin-top: 16px;
       background-image: url(../images/ice-palace-img.png);
+      @media (max-width: 1280px) {
+        width: 44vw;
+      }
     }
     .selected-cases__cryptonator {
       width: 416px;
       height: 424px;
       margin-top: 16px;
-
       background-image: url(../images/cryptonator-img.png);
+      @media (max-width: 1280px) {
+        width: 44vw;
+      }
     }
 
     .selected-cases__bicycle-city {
@@ -211,6 +250,10 @@
       height: 424px;
       margin-top: 16px;
       background-color: $secondary;
+      @media (max-width: 1280px) {
+        width: 44vw;
+        margin: 20px auto;
+      }
 
       .selected-cases__add-wrapper {
         //  width: 272px;
