--- a/src/style/__services.scss
+++ b/src/style/__services.scss
@@ -4,13 +4,19 @@
   align-items: center;
   width: 1440px;
   height: fit-content;
-  display: none;
+  // display: none;
+  @media (max-width: 1439px) {
+    width: 100vw;
+  }
 }
 .services__title {
   width: 1232px;
   height: fit-content;
   margin-top: 120px;
   margin-bottom: 48px;
+  @media (max-width: 1280px) {
+    width: 90vw;
+  }
 
   h2 {
     margin: 0;
@@ -26,11 +32,19 @@
   grid-template-rows: 300px 300px;
   grid-row-gap: 32px;
   justify-content: center;
+  @media (max-width: 1280px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .services__content_block {
   display: flex;
   flex-direction: row;
+  @media (max-width: 1280px) {
+    width: 90vw;
+    justify-content: space-between;
+  }
   .services__description {
     display: flex;
     flex-direction: column;
