--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,9 +8,11 @@
 @import "__selected-cases.scss";
 @import "__discuss.scss";
 @import "__footer.scss";
-body {
+body,
+html {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
+  overflow-x: hidden;
 }
 #app {
   max-width: 1440px;
