--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -1,32 +1,37 @@
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  //justify-content: space-between;
+  // justify-content: center;
   align-items: center;
-  // max-width: 1280px;
+
   width: 100%;
   height: 80px;
   padding: 16px 80px;
   border: none;
-  background-color: aqua;
+
+  max-width: 1440px;
   // display: none;
+
+  width: 100vw;
+  margin: 0 auto;
+  padding: 0;
   @media (max-width: 1439px) {
-    background-color: aquamarine;
-    // width: 1100px;
     width: 100vw;
-    //width: 50%;
     margin: 0 auto;
-    // justify-content: center;
     padding: 0;
   }
   .header__wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    //justify-content: center;
     align-items: center;
     font-size: 16px;
     font-weight: 600;
-    padding: 12px 10px;
+    //  padding: 12px 10px;
+    padding: 10px 80px;
+    width: 100%;
+    justify-content: center;
     @media (max-width: 1439px) {
       padding: 10px 80px;
       width: 100%;
@@ -58,8 +63,13 @@
     }
   }
   .header__logo {
-    @media (max-width: 1439px) {
+    margin-left: 0;
+    // @media (max-width: 1439px) {
+    //   margin-left: 0;
+    // }
+    @media (max-width: 1280px) {
       margin-left: auto;
+      margin-right: auto;
     }
   }
   .header__button {
@@ -74,6 +84,7 @@
 
       border: none;
     }
+    margin-left: auto;
     @media (max-width: 1439px) {
       margin-left: auto;
     }
