--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -127,12 +127,21 @@
       // display: none;
       @media (max-width: 1280px) {
         width: 50vw;
+        @media (max-width: 850px) {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          width: 100vw;
+        }
       }
     }
     .step-1 {
       // display: none;
       @media (max-width: 1280px) {
         margin-right: 0;
+      }
+      @media (max-width: 850px) {
+        display: none;
       }
     }
     .step-2 {
