--- a/src/style/__services.scss
+++ b/src/style/__services.scss
@@ -61,6 +61,9 @@
         font-size: 32px;
         font-weight: 600;
         line-height: 38px;
+        @media (max-width: 650px) {
+          font-size: 26px;
+        }
       }
       p {
         margin-top: 0;
@@ -68,6 +71,9 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 24px;
+        @media (max-width: 650px) {
+          font-size: 14px;
+        }
       }
     }
     .services__button {
