--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -33,11 +33,18 @@
     width: 456px;
     height: 234px;
     margin-left: 150px;
+    @media (max-width: 850px) {
+      width: 60vw;
+    }
   }
   @media (max-width: 1439px) {
     width: 50%;
     // width: 100vw;
     // width: 1000px;
+  }
+  @media (max-width: 850px) {
+    width: 50vw;
+    margin-top: -100px;
   }
   .welcome-screen__title {
     h1 {
@@ -89,5 +96,9 @@
     font-weight: 600;
     border: none;
     text-align: center;
+  }
+  @media (max-width: 850px) {
+    display: flex;
+    flex-direction: column;
   }
 }
