--- a/src/style/__about-us.scss
+++ b/src/style/__about-us.scss
@@ -3,7 +3,7 @@
   height: 877px;
   border: none;
   // display: none;
-  border: black 1px solid;
+  //border: black 1px solid;
   @media (max-width: 1439px) {
     // width: 1280px;
     width: 100vw;
@@ -36,10 +36,14 @@ content {
       width: 100%;
       // margin-top: 96px;
     }
+    @media (max-width: 600px) {
+      height: fit-content;
+    }
     @media (max-width: 1100px) {
       width: 100%;
       flex-wrap: wrap;
       flex-direction: column;
+      margin-top: 30px;
     }
 
     .about-us__text {
@@ -50,6 +54,9 @@ content {
       }
       @media (max-width: 1100px) {
         width: 100%;
+      }
+      @media (max-width: 600px) {
+        height: fit-content;
       }
       h2 {
         font-size: 32px;
@@ -77,6 +84,9 @@ content {
         width: auto;
         margin-left: 0;
       }
+      @media (max-width: 600px) {
+        margin-top: 16px;
+      }
 
       img {
         @media (max-width: 1280px) {
@@ -84,6 +94,10 @@ content {
         }
         @media (max-width: 1100px) {
           width: 400px;
+        }
+
+        @media (max-width: 600px) {
+          width: 85%;
         }
       }
     }
