--- a/src/style/__footer.scss
+++ b/src/style/__footer.scss
@@ -10,6 +10,9 @@
   @media (max-width: 1439px) {
     width: 100vw;
   }
+  @media (max-width: 600px) {
+    height: fit-content;
+  }
 
   .footer__wrapper {
     width: 1280px;
@@ -18,8 +21,17 @@
     @media (max-width: 1280px) {
       width: 90vw;
     }
+    @media (max-width: 600px) {
+      margin: 0 auto;
+    }
 
     .footer__email {
+      @media (max-width: 600px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 30px;
+      }
       h2 {
         margin: 0;
         color: $white;
@@ -33,6 +45,10 @@
       justify-content: space-between;
       align-items: center;
       margin-top: 47px;
+      @media (max-width: 600px) {
+        flex-direction: column;
+        margin-top: 20px;
+      }
       .footer__info {
         p {
           color: $footer-grey;
