--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -12,6 +12,9 @@
     // width: 1000px;
     margin: 0 auto;
   }
+  @media (max-width: 380px) {
+    height: 600px;
+  }
 }
 
 .welcome-screen__left-box {
@@ -36,29 +39,49 @@
     @media (max-width: 850px) {
       width: 60vw;
     }
+    @media (max-width: 320px) {
+      margin-left: 35vw;
+    }
   }
   @media (max-width: 1439px) {
     width: 50%;
-    // width: 100vw;
-    // width: 1000px;
   }
   @media (max-width: 850px) {
     width: 50vw;
     margin-top: -100px;
+  }
+  @media (max-width: 600px) {
+    z-index: 2;
+  }
+  @media (max-width: 420px) {
+    justify-content: start;
+    margin-top: 100px;
   }
   .welcome-screen__title {
     h1 {
       font-size: 40px;
       font-weight: 700;
       margin-top: 0;
+      @media (max-width: 420px) {
+        font-size: 36px;
+      }
+    }
+    @media (max-width: 600px) {
+      width: 80vw;
     }
   }
 
   .welcome-screen__subtitle {
+    @media (max-width: 600px) {
+      width: 80vw;
+    }
     h3 {
       font-size: 20px;
       font-weight: 300;
       margin-top: 0;
+      @media (max-width: 420px) {
+        font-size: 18px;
+      }
     }
   }
 }
@@ -75,10 +98,14 @@
     // width: 100vw;
     // width: 1000px;
   }
+  @media (max-width: 600px) {
+    z-index: 1;
+  }
 }
 
 .welcome-screen__buttons {
   margin-top: 48px;
+
   .welcome-screen__write-us {
     width: 220px;
     height: 48px;
@@ -96,9 +123,15 @@
     font-weight: 600;
     border: none;
     text-align: center;
+    @media (max-width: 420px) {
+      font-size: 14px;
+    }
   }
   @media (max-width: 850px) {
     display: flex;
     flex-direction: column;
+  }
+  @media (max-width: 600px) {
+    width: 80vw;
   }
 }
