--- a/src/style/__services.scss
+++ b/src/style/__services.scss
@@ -52,7 +52,7 @@
     height: 40vw;
   }
   @media (max-width: 420px) {
-    // border: $gray-light 2px solid;
+    border: $gray-light 2px solid;
   }
 
   .services__description {
@@ -71,11 +71,10 @@
       //height: fit-content;
     }
     @media (max-width: 420px) {
+      height: 90%;
+      margin: 10px;
+      justify-content: center;
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 100%;
     }
 
     .services__wrapper {
@@ -86,6 +85,9 @@
       }
       @media (max-width: 450px) {
         margin-top: 10px;
+      }
+      @media (max-width: 420px) {
+        margin-top: 20px;
       }
       h2 {
         margin-top: 0;
@@ -104,7 +106,6 @@
           line-height: 26px;
           width: max-content;
         }
-
         @media (max-width: 420px) {
           font-size: 16px;
           width: 100%;
@@ -171,11 +172,12 @@
           font-size: 12px;
         }
         @media (max-width: 420px) {
-          height: 50%;
-          font-size: 10px;
-          margin: 0;
-          width: 80%;
-          align-self: center;
+          // height: 50%;
+          // font-size: 10px;
+          // margin: 0;
+          // width: 80%;
+          // align-self: center;
+          height: 30px;
         }
         @media (max-width: 300px) {
           font-size: 8px;
@@ -183,10 +185,10 @@
       }
       .new-button-img {
         display: none;
-        @media (max-width: 420px) {
-          display: block;
-          width: 10vw;
-        }
+        // @media (max-width: 420px) {
+        //   display: block;
+        //   width: 10vw;
+        // }
         img {
           width: 10vw;
           height: auto;
