--- a/src/style/style.css
+++ b/src/style/style.css
@@ -497,7 +497,6 @@ content .about-us__partners {
 }
 @media (max-width: 1100px) {
   content .about-us__partners {
-    /* width: fit-content; */
     flex-wrap: wrap;
     justify-content: center;
     height: -moz-fit-content;
@@ -507,9 +506,21 @@ content .about-us__partners {
 }
 content .about-us__partners div {
   margin: 0 26px;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+@media (max-width: 635px) {
+  content .about-us__partners div {
+    margin: 0;
+  }
 }
 content .about-us__partners img {
   filter: grayscale(100%) contrast(0%) brightness(100%);
+}
+@media (max-width: 800px) {
+  content .about-us__partners img {
+    width: 50%;
+  }
 }
 
 .how-we-work {
@@ -760,6 +771,11 @@ content .about-us__partners img {
     height: 40vw;
   }
 }
+@media (max-width: 420px) {
+  .services__content_block {
+    border: #f2f2f2 2px solid;
+  }
+}
 .services__content_block .services__description {
   display: flex;
   flex-direction: column;
@@ -781,11 +797,10 @@ content .about-us__partners img {
 }
 @media (max-width: 420px) {
   .services__content_block .services__description {
+    height: 90%;
+    margin: 10px;
+    justify-content: center;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
   }
 }
 .services__content_block .services__description .services__wrapper {
@@ -800,6 +815,11 @@ content .about-us__partners img {
 @media (max-width: 450px) {
   .services__content_block .services__description .services__wrapper {
     margin-top: 10px;
+  }
+}
+@media (max-width: 420px) {
+  .services__content_block .services__description .services__wrapper {
+    margin-top: 20px;
   }
 }
 .services__content_block .services__description .services__wrapper h2 {
@@ -917,11 +937,7 @@ content .about-us__partners img {
 }
 @media (max-width: 420px) {
   .services__content_block .services__description .services__button button {
-    height: 50%;
-    font-size: 10px;
-    margin: 0;
-    width: 80%;
-    align-self: center;
+    height: 30px;
   }
 }
 @media (max-width: 300px) {
@@ -931,12 +947,6 @@ content .about-us__partners img {
 }
 .services__content_block .services__description .services__button .new-button-img {
   display: none;
-}
-@media (max-width: 420px) {
-  .services__content_block .services__description .services__button .new-button-img {
-    display: block;
-    width: 10vw;
-  }
 }
 .services__content_block .services__description .services__button .new-button-img img {
   width: 10vw;
