--- a/src/style/__about-us.scss
+++ b/src/style/__about-us.scss
@@ -100,6 +100,9 @@ content {
           width: 85%;
         }
       }
+      @media (max-width: 420px) {
+        height: 50vw;
+      }
     }
   }
   .about-us__middle {
@@ -119,6 +122,9 @@ content {
       justify-content: end;
       width: 412px;
       height: 240px;
+      @media (max-width: 420px) {
+        height: 50vw;
+      }
     }
     .about-us__stat {
       display: flex;
